[tool.poetry]
name = "2-2-parser"
version = "0.1.0"
description = ""
authors = ["Jorique <guselnikovgeorgiy@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
lxml = "^5.3.0"
xlrd = "^2.0.1"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
aiohttp = "^3.11.9"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
